# GenAI

./: pyproject.toml
docs/: Google_ADK.md
src/google_adk/: .env.example
