[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
ddependencies = [
    "google-adk>=1.5.0",
    "gradio>=5.34.2",
    "uvicorn>=0.34.3",
]

[project.scripts]
your_script_name = "your_package.your_module:your_function" 

[tool.uv.workspace]
members = [
    "genai",
]
